--- a/cloud.html
+++ b/cloud.html
@@ -38,7 +38,8 @@
         <a target="_blank" href="images/colourgener.png">
           <img src="images/colourgener.png" alt="Random Colour Generator demo page" class="thumb"></a>
     </figure>
-    <p>Building these serverless mini-projects was a blast, and offered fantastic hands-on experience tuning API, S3, and Lambda interactions – experience that reflects core principles of real cloud projects. Hopefully, they represent just the first step in my larger cloud journey.</p>
+    <p>Building these serverless mini-projects was a fun challenge that helped me get comfortable working with APIs, S3, and Lambda—exactly the skills needed for real-world cloud work.</p>
+    <p>My cloud journey continued when I applied the replatforming strategy (also known as "lift, tinker, and shift") to migrate an already successful <a href="proj.html#pms-api">Project Management System to AWS</a>.</p>
   </main>
 
   <footer>
