--- a/cloud.html
+++ b/cloud.html
@@ -24,7 +24,13 @@
 
   <main>
     <h2>My Cloud Journey</h2>
-    <p>While AWS Cloud Practitioner (CLF-C02) and Azure Fundamentals (AZ-900) certifications provided theoretical knowledge, I was eager to get hands-on experience. This led me to:</p>
+    <p>In December 2024, I earned two cloud certifications: Azure Fundamentals (AZ-900) and AWS Cloud Practitioner (CLF-C02). The study experience largely felt like memorising a massive product catalog rather than fostering practical skills.</p>
+    <p id="podcast">To distill and organise the <strong>AWS essentials</strong> from this vast amount of information, I created this <strong>podcast</strong> using Google's NotebookLM. Tune in and explore the key AWS concepts:</p>
+    <audio controls>      
+      <source src="audio/AWS.Essentials.mp3" type="audio/mpeg">
+    Your browser does not support mp3 audio format.
+    </audio>
+    <p>I was also eager to get some hands-on experience. This led me to:</p>
     <h3>Serverless Mini-Projects:</h3>
     <h4>(January 2025)</h4>
     <ul>
