--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
     <section class="recent">
       <h3>Recent Developments</h3>
+      <p>In June 2025 I produced a <a href="cloud.html#podcast">podcast about AWS Essentials</a>.</p>
       <p>In 2024, compact LLMs emerged as a promising area of research.</p>
       <p>I'm currently exploring the <a href="legacy.html#fine-tuning">fine-tuning of compact LLMs</a> with 0.5-1 billion parameters, in my spare time, focusing on their potential for resource-constrained environments. This exploration aligns with the AI-backed app industry's strategic shift towards proprietary models, driven by the rise of autonomous, self-planning, RL-optimised agents and the ongoinging market consolidation in favour of those who build their own models.</p>      
     </section>
