Azure podcast added

--- a/cloud.html
+++ b/cloud.html
@@ -30,6 +30,11 @@
       <source src="audio/AWS.Essentials.mp3" type="audio/mpeg">
     Your browser does not support mp3 audio format.
     </audio>
+    <p>And explore the key Azure concepts as well:</p>
+    <audio controls>      
+      <source src="audio/AzureGuide.mp3" type="audio/mpeg">
+    Your browser does not support mp3 audio format.
+    </audio>
     <p>I was also eager to get some hands-on experience. This led me to:</p>
     <h3>Serverless Mini-Projects:</h3>
     <h4>(January 2025)</h4>
