--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="project">
         <img src="images/pms.png" alt="Project Management System">
         <h3>Project Management System</h3>
-        <p>A simple yet powerful app to manage and visualise tasks with intuitive views. Built with Django.</p>
+        <p>A simple yet powerful app to manage and visualise tasks with intuitive views. Built with Django to ensure robustness and future scalability.</p>
         <p><a href="proj.html#pms-api">A new version of PMS MVP</a> incorporates a robust API for enhanced flexibility and integration.</p>
       </div>
       </a>
@@ -43,9 +43,16 @@
 
     <section class="recent">
       <h3>Recent Developments</h3>
-      <p>In June 2025 I produced a <a href="cloud.html#podcast">podcast about AWS Essentials</a>.</p>
-      <p>In 2024, compact LLMs emerged as a promising area of research.</p>
-      <p>I'm currently exploring the <a href="legacy.html#fine-tuning">fine-tuning of compact LLMs</a> with 0.5-1 billion parameters, in my spare time, focusing on their potential for resource-constrained environments. This exploration aligns with the AI-backed app industry's strategic shift towards proprietary models, driven by the rise of autonomous, self-planning, RL-optimised agents and the ongoinging market consolidation in favour of those who build their own models.</p>      
+      <ul>
+        <li>
+      <p><strong>Cloud Essentials Podcasts (June 2025):</strong> Produced 
+        <a href="cloud.html#podcast">two new podcasts</a> focusing on the essentials of <strong>AWS</strong> and <strong>Azure</strong>.</p>
+      </li>
+      <li>
+      <p><strong>Exploring Compact LLMs: </strong>In 2024, compact LLMs emerged as a promising area of research. I'm currently dedicating my spare time to <a href="legacy.html#fine-tuning">fine-tuning compact LLMs</a>, on a consumer-grade laptop with decent RAM, memory, and GPU power ("a resource-constrained environment").</p>
+      <p>This work aligns with a broader strategic shift in the AI industry: market consolidation among AI access providers is driving clients toward proprietary models. The <strong>"Train or Die!"</strong> trend reflects a stark reality—as major players increasingly control access to AI interfaces, developing and understanding custom models becomes crucial for businesses looking to build competitive, AI-driven applications.</p>
+      </li>
+      </ul>     
     </section>
   </main>
 
