--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <img src="images/pms.png" alt="Project Management System">
         <h3>Project Management System</h3>
         <p>A simple yet powerful app to manage and visualise tasks with intuitive views. Built with Django to ensure robustness and future scalability.</p>
-        <p><a href="proj.html#pms-api">A new version of PMS MVP</a> incorporates a robust API for enhanced flexibility and integration.</p>
+        <p><a href="proj.html#pms-api">A new version of PMS MVP</a> incorporates a robust API for enhanced flexibility and integration, now deployed within a Docker container on an AWS EC2 instance.</p>
       </div>
       </a>
     </section>
