Added AI Agents Podcast

--- a/index.html
+++ b/index.html
@@ -45,12 +45,19 @@
       <h3>Recent Developments</h3>
       <ul>
         <li>
+          <p id="agents"><strong>AI Agents (June 2025): </strong>Produced a 5 minutes' podcast exploring the transformative shift from AI assistants to more autonomous AI agents.</p>
+          <audio controls>      
+            <source src="audio/AI-Agents.mp3" type="audio/mpeg">
+          Your browser does not support mp3 audio format.
+          </audio>
+        </li>
+        <li>
       <p><strong>Cloud Essentials Podcasts (June 2025):</strong> Produced 
-        <a href="cloud.html#podcast">two new podcasts</a> focusing on the essentials of <strong>AWS</strong> and <strong>Azure</strong>.</p>
+        <a href="cloud.html#podcast">two deep dive podcasts</a> focusing on the essentials of <strong>AWS</strong> and <strong>Azure</strong>.</p>
       </li>
       <li>
       <p><strong>Exploring Compact LLMs: </strong>In 2024, compact LLMs emerged as a promising area of research. I'm currently dedicating my spare time to <a href="legacy.html#fine-tuning">fine-tuning compact LLMs</a>, on a consumer-grade laptop with decent RAM, memory, and GPU power ("a resource-constrained environment").</p>
-      <p>This work aligns with a broader strategic shift in the AI industry: market consolidation among AI access providers is driving clients toward proprietary models. The <strong>"Train or Die!"</strong> trend reflects a stark reality—as major players increasingly control access to AI interfaces, developing and understanding custom models becomes crucial for businesses looking to build competitive, AI-driven applications.</p>
+      <p>This work aligns with a broader strategic shift in the AI industry: market consolidation among AI access providers is driving clients toward proprietary models. The <strong>"Train or Die!"</strong> trend reflects a stark reality - as major players increasingly control access to AI interfaces, developing and understanding custom models becomes crucial for businesses looking to build competitive, AI-driven applications.</p>
       </li>
       </ul>     
     </section>
