Second podcast version on AI Agents

--- a/index.html
+++ b/index.html
@@ -46,8 +46,14 @@
       <ul>
         <li>
           <p id="agents"><strong>AI Agents (June 2025): </strong>Produced a 5 minutes' podcast exploring the transformative shift from AI assistants to more autonomous AI agents.</p>
+          <p>For strategists and thought leaders:</p>
           <audio controls>      
             <source src="audio/AI-Agents.mp3" type="audio/mpeg">
+          Your browser does not support mp3 audio format.
+          </audio>
+          <p> Enterprise leaders can find practical insights and concrete examples of current AI agent applications (from Google's report) in the other podcast version:</p>
+          <audio controls>      
+            <source src="audio/AI-Agents2.mp3" type="audio/mpeg">
           Your browser does not support mp3 audio format.
           </audio>
         </li>
