Added podcast advert to Main

--- a/index.html
+++ b/index.html
@@ -23,12 +23,27 @@
   </header>
 
   <main>
+
     <section class="intro">
       <h3>Nice to meet you</h3>
       <h1>Hello, I'm Alex</h1>
       <h2>Software Developer & Problem Solver</h2>
-      <p>Welcome to my portfolio! With expertise in Python, Django, JavaScript, and a bit of cloud technologies, I build solutions that make an impact. As a glimpse into my journey and skills, please explore this featured project:</p>
+      <section>
+        <img src="images/GCSE1.png" alt="Podcast Frontpage" style="width: 50%; float: left;margin-right: 20px; margin-bottom: 15px;">
+        <p>I've been experimenting with NotebookLM for <strong>podcast production</strong>, even publishing several short episodes on YouTube, including:</p>
+        <div style="clear: both;"></div>
+        <ul style="background-color:yellow">
+          <li><p><b><a href="https://youtu.be/4XHgDKHigZQ">The Death of Meaning: The Language Lab of Tyranny</a></b> George Orwell, “Animal Farm”</p></li>
+          <li><p><b><a href="https://youtu.be/sD-EU8G9i3g">Inevitable or Engineered? The Real Murderer in Plain Sight</a></b> "Blood Brothers" by Willy Russell.</p></li>
+          <li><p><b><a href="https://youtu.be/Q8QsVk0LzhU">Beyond Good & Bad: The Morality You Can't Afford</a></b> Shelagh Delaney, "A Taste of Honey" </p></li>
+          <li><p><b><a href="https://youtu.be/kT-2MC9nVSg">The Burlings Didn’t Learn. Will You?</a></b> “An Inspector Calls” by J.B. Priestley</p></li>
+          <li><p><b><a href="https://youtu.be/CrEnNOec7Uc">How to Destroy a Life Without Meaning To</a></b> “An Inspector Calls” by J.B. Priestley</p></li>
+        </ul>
+        
+      </section>
+      <p>Welcome to my portfolio! With expertise in Python, Django, JavaScript, and a bit of cloud technologies, I build solutions that make an impact. As a glimpse into my journey and skills, please explore this featured projects:</p>
     </section>
+
 
     <section class="projects">
       <a href="pms.html" class="project-link">
